kubernetes/clusters/home/2-infra/ddns-updater/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns-updater-service
  namespace: infra

spec:
  selector:
    app: ddns-updater

  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP

  type: ClusterIP
