kubernetes/clusters/home/2-infra/ddns-updater/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddns-updater-ingress
  namespace: infra

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: ddns-updater.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ddns-updater-service
                port:
                  number: 8000
